--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://srchezz.github.io/react-eat-n-split",
-  "name": "react-eat-n-split",
+  "homepage": "http://srchezz.github.io/react-eat-n-split",
+  "name": "eat-n-split",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
